main.go: formHandler & helloHandler

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
        
     </head>
     <body>
-       <h2> Stctic Website</h2>
+       <h2> Static Website</h2>
         
         <script src="" async defer></script>
     </body>
